--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Recuperador de Contas</title>
+    <title>Recuperação de Conta</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>Recuperador de Contas Online</h1>
 
-    <button>Recuperar Conta</button>
-    <button>Suporte</button>
+<div class="container">
+    <h1>Recuperação de Conta</h1>
+    <p>Escolhe o que queres recuperar</p>
+
+    <a href="/recover-password">
+        <button>🔑 Recuperar Password</button>
+    </a>
+
+    <a href="/recover-username">
+        <button>👤 Recuperar Nome de Utilizador</button>
+    </a>
+</div>
+
 </body>
 </html>
