Fix HTML structure and formatting in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Recuperação de Conta</title>
-    <link rel="stylesheet" href="/static/style.css">
+  <title>Recuperação de Conta</title>
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-
-<div class="container">
+  <div class="card">
     <h1>Recuperação de Conta</h1>
     <p>Escolhe o que queres recuperar</p>
 
     <a href="/recover-password">
-        <button>🔑 Recuperar Password</button>
+      <button>🔑 Recuperar Password</button>
     </a>
 
     <a href="/recover-username">
-        <button>👤 Recuperar Nome de Utilizador</button>
+      <button>👤 Recuperar Nome de Utilizador</button>
     </a>
-</div>
-
+  </div>
 </body>
 </html>
