--- a/templates/recover_password.html
+++ b/templates/recover_password.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>Recuperar Password</title>
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-  <h2>Recuperar Password</h2>
+  <div class="card">
+    <h1>Recuperar Password</h1>
 
-  <h3>Pedir Código</h3>
-  <form method="POST" action="/recover/password/request">
-    <input type="email" name="email" placeholder="Email" required>
-    <br><br>
-    <button type="submit">Enviar Código</button>
-  </form>
-
-  <hr>
-
-  <h3>Confirmar Código</h3>
-  <form method="POST" action="/recover/password/confirm">
-    <input type="email" name="email" placeholder="Email" required><br><br>
-    <input type="text" name="code" placeholder="Código" required><br><br>
-    <input type="password" name="new_password" placeholder="Nova Password" required><br><br>
-    <button type="submit">Alterar Password</button>
-  </form>
+    <form method="POST">
+      <input type="email" placeholder="Email" required>
+      <input type="text" placeholder="Código" required>
+      <input type="password" placeholder="Nova password" required>
+      <button>Alterar Password</button>
+    </form>
+  </div>
 </body>
 </html>
