Refactor recovery account UI elements

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,17 +5,12 @@
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-  <div class="card">
-    <h1>Recuperação de Conta</h1>
-    <p>Escolhe o que queres recuperar</p>
+<div class="card">
+  <h1>Recuperação de Conta</h1>
+  <p>Escolhe o que queres recuperar</p>
 
-    <a href="/recover-password">
-      <button>🔑 Recuperar Password</button>
-    </a>
-
-    <a href="/recover-username">
-      <button>👤 Recuperar Nome de Utilizador</button>
-    </a>
-  </div>
+  <a href="/recover-password" class="btn">🔑 Recuperar Password</a>
+  <a href="/recover-username" class="btn outline">👤 Recuperar Nome</a>
+</div>
 </body>
 </html>
