Refactor password recovery HTML and JavaScript

--- a/templates/recover_password.html
+++ b/templates/recover_password.html
@@ -10,17 +10,15 @@
   <h1>Recuperar Password</h1>
   <p id="msg"></p>
 
-  <!-- ETAPA 1 -->
-  <div id="step-email">
-    <input type="email" id="email" placeholder="Email">
+  <div id="step1">
+    <input id="email" placeholder="Email">
     <button onclick="sendCode()">Enviar código</button>
   </div>
 
-  <!-- ETAPA 2 (escondida no início) -->
-  <div id="step-confirm" style="display:none;">
-    <input type="text" id="code" placeholder="Código">
-    <input type="password" id="password" placeholder="Nova password">
-    <button onclick="confirmPassword()">Alterar Password</button>
+  <div id="step2" style="display:none;">
+    <input id="code" placeholder="Código">
+    <input id="password" type="password" placeholder="Nova password">
+    <button onclick="confirm()">Alterar Password</button>
   </div>
 </div>
 
@@ -29,31 +27,26 @@ function sendCode() {
   fetch("/recover-password", {
     method: "POST",
     headers: {"Content-Type": "application/x-www-form-urlencoded"},
-    body: "step=email&email=" + document.getElementById("email").value
+    body: "step=email&email=" + email.value
   })
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("msg").innerText = data.msg;
-    if (data.status === "ok") {
-      document.getElementById("step-confirm").style.display = "block";
-    }
+  .then(r => r.json())
+  .then(d => {
+    msg.innerText = d.msg;
+    if (d.status === "ok") step2.style.display = "block";
   });
 }
 
-function confirmPassword() {
+function confirm() {
   fetch("/recover-password", {
     method: "POST",
     headers: {"Content-Type": "application/x-www-form-urlencoded"},
     body:
-      "step=confirm" +
-      "&email=" + document.getElementById("email").value +
-      "&code=" + document.getElementById("code").value +
-      "&password=" + document.getElementById("password").value
+      "step=confirm&email=" + email.value +
+      "&code=" + code.value +
+      "&password=" + password.value
   })
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("msg").innerText = data.msg;
-  });
+  .then(r => r.json())
+  .then(d => msg.innerText = d.msg);
 }
 </script>
 
