--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,12 @@
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-<div class="card">
-  <h1>Recuperação de Conta</h1>
-  <p>Escolhe o que queres recuperar</p>
+  <div class="card">
+    <h1>Recuperação de Conta</h1>
+    <p>Escolhe o que queres recuperar</p>
 
-  <a href="/recover-password" class="btn">🔑 Recuperar Password</a>
-  <a href="/recover-username" class="btn outline">👤 Recuperar Nome</a>
-</div>
+    <a href="/recover-password" class="btn">🔑 Recuperar Password</a>
+    <a href="/recover-username" class="btn">👤 Recuperar Nome de Utilizador</a>
+  </div>
 </body>
 </html>
