--- a/templates/recover_username.html
+++ b/templates/recover_username.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Recuperar Nome</title>
+  <title>Recuperar Password</title>
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
 <div class="card">
-  <h1>Recuperar Nome</h1>
-  <p id="msg"></p>
+  <h2>Recuperar Password</h2>
 
   <input id="email" placeholder="Email">
-  <button onclick="send()">Enviar</button>
+  <button onclick="sendEmail()">Enviar Código</button>
+
+  <div id="step2" style="display:none;">
+    <input id="code" placeholder="Código">
+    <input id="password" placeholder="Nova password" type="password">
+    <button onclick="confirm()">Alterar Password</button>
+  </div>
+
+  <p id="msg"></p>
 </div>
 
 <script>
-function send() {
-  fetch("/recover-username", {
-    method: "POST",
-    headers: {"Content-Type": "application/x-www-form-urlencoded"},
-    body: "email=" + email.value
-  })
-  .then(r => r.json())
-  .then(d => msg.innerText = d.msg);
+function sendEmail(){
+  fetch("/api/recover-password", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({step:"email", email:email.value})
+  }).then(r=>r.json()).then(d=>{
+    msg.innerText = d.msg;
+    if(d.status==="ok") step2.style.display="block";
+  });
+}
+
+function confirm(){
+  fetch("/api/recover-password", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({
+      step:"confirm",
+      email:email.value,
+      code:code.value,
+      password:password.value
+    })
+  }).then(r=>r.json()).then(d=>{
+    msg.innerText = d.msg;
+  });
 }
 </script>
 </body>
