--- a/templates/recover_password.html
+++ b/templates/recover_password.html
@@ -5,50 +5,47 @@
   <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-
 <div class="card">
-  <h1>Recuperar Password</h1>
-  <p id="msg"></p>
+  <h2>Recuperar Password</h2>
 
-  <div id="step1">
-    <input id="email" placeholder="Email">
-    <button onclick="sendCode()">Enviar código</button>
-  </div>
+  <input id="email" placeholder="Email">
+  <button onclick="sendEmail()">Enviar Código</button>
 
   <div id="step2" style="display:none;">
     <input id="code" placeholder="Código">
-    <input id="password" type="password" placeholder="Nova password">
+    <input id="password" placeholder="Nova password" type="password">
     <button onclick="confirm()">Alterar Password</button>
   </div>
+
+  <p id="msg"></p>
 </div>
 
 <script>
-function sendCode() {
-  fetch("/recover-password", {
-    method: "POST",
-    headers: {"Content-Type": "application/x-www-form-urlencoded"},
-    body: "step=email&email=" + email.value
-  })
-  .then(r => r.json())
-  .then(d => {
+function sendEmail(){
+  fetch("/api/recover-password", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({step:"email", email:email.value})
+  }).then(r=>r.json()).then(d=>{
     msg.innerText = d.msg;
-    if (d.status === "ok") step2.style.display = "block";
+    if(d.status==="ok") step2.style.display="block";
   });
 }
 
-function confirm() {
-  fetch("/recover-password", {
-    method: "POST",
-    headers: {"Content-Type": "application/x-www-form-urlencoded"},
-    body:
-      "step=confirm&email=" + email.value +
-      "&code=" + code.value +
-      "&password=" + password.value
-  })
-  .then(r => r.json())
-  .then(d => msg.innerText = d.msg);
+function confirm(){
+  fetch("/api/recover-password", {
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({
+      step:"confirm",
+      email:email.value,
+      code:code.value,
+      password:password.value
+    })
+  }).then(r=>r.json()).then(d=>{
+    msg.innerText = d.msg;
+  });
 }
 </script>
-
 </body>
 </html>
